fixed resize jitter + alignment issue

--- a/main.css
+++ b/main.css
@@ -175,6 +175,7 @@ nav {
     margin-left: auto;
     padding: 10px;
     background: #194373;
+    transition: width ease 1s;
 }
 
 .headwrap {
